
  IMPROVEMENTS
   HBASE-1418  Transacitonal improvments and fixes (Clint Morgan via Stack)
   HBASE-1424  have shell print regioninfo and location on first load if
               DEBUG enabled
   HBASE-1008  [performance] The replay of logs on server crash takes way too
               long
   HBASE-1401  close HLog (and open new one) if there hasnt been edits in
               N minutes/hours

Release 0.19.2 - May 9th, 2009 
  BUG FIXES
   HBASE-1303  Secondary index configuration prevents HBase from starting
               (Ken Weiner via Stack)
   HBASE-1202  getRow does not always work when specifying number of versions
   HBASE-1319  Bug in atomicIncrement 0.19.1 only (Ryan Rawson via Stack)
   HBASE-1301  HTable.getRow() returns null if the row does no exist
               (Rong-en Fan via Stack)
   HBASE-1292  php thrift's getRow() would throw an exception if the row does
               not exist (Rong-en Fan via Stack)
   HBASE-1287  Partitioner class not used in TableMapReduceUtil.initTableReduceJob()
               (Lars George and Billy Pearson via Stack)
   HBASE-1350  New method in HTable.java to return start and end keys for
               regions in a table (Vimal Mathew via Stack)
   HBASE-1058  Prevent runaway compactions
   HBASE-1347  HTable.incrementColumnValue does not take negative 'amount'
               (Evgeny Ryabitskiy via Stack)
   HBASE-1365  Typo in TableInputFormatBase.setInputColums (Jon Gray via Stack)
   HBASE-1318  Thrift server doesnt know about atomicIncrement
               (Ryan Rawson via Stack)
   HBASE-1352  incrementColumnValue/Memcache bug
   HBASE-1279  Fix the way hostnames and IPs are handled
   HBASE-1368  HBASE-1279 broke the build
   HBASE-1264  Wrong return values of comparators for ColumnValueFilter
               (Thomas Schneider via Andrew Purtell)
   HBASE-1371  Generating the javadoc gives warnings in branch 0.19
   HBASE-1372  TestGetRowVersions doesn't pass on 0.19 branch

Release 0.19.1 - 03/19/2009