@@ -24,6 +24,8 @@ Release 0.19.3 - Unreleased
                long
    HBASE-1401  close HLog (and open new one) if there hasnt been edits in
                N minutes/hours
+   HBASE-1420  add abliity to add and remove (table) indexes on existing
+               tables (Clint Morgan via Stack)
 
 Release 0.19.2 - May 9th, 2009 
   BUG FIXES
